2007-08-09  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (themes_init): reenable theme lockdown

2007-08-09  Jens Granseuer  <jensgr@gmx.net>

	* gnome-wp-xml.c: (gnome_wp_xml_load_list),
	(gnome_wp_xml_save_list):
	* theme-installer.c: (gnome_theme_install_from_uri): tiny optimization

2007-08-08  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (gtk_theme_changed): revert r7973 because it
	broke color scheme notifications, and add a comment
	* appearance-themes.c: (theme_setting_changed_cb), (themes_init):
	connect to some signals from GtkSettings instead of GConf

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_add_images), (wp_dragged_image),
	(desktop_init):
	* appearance-main.c: (main):
	* appearance-style.c: (update_color_buttons_from_settings),
	(check_color_schemes_enabled), (update_cursor_size_scale),
	(prepare_list), (style_init):
	* appearance-ui.c: (ui_init): shave off a number of unnecessary casts

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (gtk_theme_changed): also remove code that we
	needed when the thumbnailer was still in-process

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (color_button_clicked_cb): remove stuff I forgot
	to delete

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (color_button_clicked_cb): make sure the color
	scheme has changed before writing to GConf and enabling the reset button

2007-08-07  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (update_color_buttons_from_string): simplify
	(check_color_schemes_enabled): fix check for available symbolic colors
	and make buttons for unsupported colors insensitive (bug #464081)
	(color_button_clicked_cb), (style_init): simplify

	* data/appearance.glade: name the color buttons exactly like their
	respective color so we don't need to keep two arrays around

2007-08-05  Jens Granseuer  <jensgr@gmx.net>
